// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Widgets/Tasks All Complete 1`] = `
<div
  className="css-e53awj-MuiStack-root"
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      consequatur et veritatis
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Ratione voluptates eveniet eos autem vel delectus.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      est corporis accusamus
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Autem suscipit molestias iste omnis.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      nesciunt natus mollitia
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Est dolor autem perspiciatis dolores aut quo.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      doloribus tempore cumque
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Et rerum quas officia consequatur ut quae voluptas.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      accusantium dolore eum
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Perspiciatis non consequatur velit impedit quasi.
    </p>
  </div>
</div>
`;

exports[`Storyshots Widgets/Tasks Empty 1`] = `
<div
  className="css-e53awj-MuiStack-root"
/>
`;

exports[`Storyshots Widgets/Tasks Half Complete 1`] = `
<div
  className="css-e53awj-MuiStack-root"
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      nesciunt natus mollitia
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Est dolor autem perspiciatis dolores aut quo.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      doloribus tempore cumque
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Et rerum quas officia consequatur ut quae voluptas.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      accusantium dolore eum
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Perspiciatis non consequatur velit impedit quasi.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      consequatur et veritatis
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Ratione voluptates eveniet eos autem vel delectus.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dhz7ut-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-bfm9s5-MuiTypography-root"
    >
      est corporis accusamus
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-x45spb-MuiTypography-root"
    >
      Autem suscipit molestias iste omnis.
    </p>
  </div>
</div>
`;

exports[`Storyshots Widgets/Tasks None Complete 1`] = `
<div
  className="css-e53awj-MuiStack-root"
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      consequatur et veritatis
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Ratione voluptates eveniet eos autem vel delectus.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      est corporis accusamus
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Autem suscipit molestias iste omnis.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      nesciunt natus mollitia
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Est dolor autem perspiciatis dolores aut quo.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      doloribus tempore cumque
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Et rerum quas officia consequatur ut quae voluptas.
    </p>
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-4m825c-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-16ixxcf-MuiTypography-root"
    >
      accusantium dolore eum
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 css-nxlqkn-MuiTypography-root"
    >
      Perspiciatis non consequatur velit impedit quasi.
    </p>
  </div>
</div>
`;
